fixed minor spacing issues

--- a/greenbase-app/src/app/content/content.component.sass
+++ b/greenbase-app/src/app/content/content.component.sass
@@ -1,5 +1,5 @@
 .content
-      padding: 20px
+      padding: 30px 50px
       background-color: #F5F6FA
       height: 100%
       color: #131523
