--- a/greenbase-app/src/app/header/header.component.sass
+++ b/greenbase-app/src/app/header/header.component.sass
@@ -2,7 +2,7 @@
       position: relative
       box-shadow: 0px 1px 4px 0px #15223214
       display: grid
-      grid-template-columns: 250px auto 300px
+      grid-template-columns: 270px auto 300px
       align-items: center
       padding: 10px 20px
       height: 68px
@@ -28,6 +28,7 @@
       
 .user-notifs
       gap: 20px
+      margin-left: 20px
       
 .notifications
       position: relative
